<resources>
    <string name="app_name">Mehdi Store</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="latest">جدیدترین</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComents">دیدن همه نظرات</string>
    <string name="productsList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">محبوب ترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزدون به سبد خرید</string>
    <string name="unknown_error">خطای نامشخص</string>
    <string name="success_addToCart">به سبد خرید اضافه شد</string>
    <string name="loginTitle">ورود</string>
    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="signUpHint">حساب کاربری ندارید؟</string>
    <string name="signUp">ثبت نام</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید</string>


    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCArt">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزئیات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>
    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>
    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayMent">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="address">آدرس</string>
    <string name="checkOutToolbatTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به صفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>
    <string name="purcahseStatus">وضعیت سفارش</string>
    <string name="favorites">لیست علاقه مندی ها</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="price">مبلغ</string>
    <string-array name="sortTitleArray">

        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>
</resources>