<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
android:gravity="center_horizontal"    android:orientation="vertical">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="60dp"
android:src="@drawable/ic_nike_logo"
        app:tint="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loginScreenTitle"
        android:textAppearance="?textAppearanceHeadline5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authHint"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginTop="8dp"
        android:alpha="0.8"/>
<EditText
    android:layout_width="@dimen/authViewWidth"
    android:layout_height="wrap_content"
android:id="@+id/email_login_et"
    android:hint="@string/email"
    android:gravity="right|center_vertical"
    style="@style/Theme.NikeStoreTir1403.AuthTheme.EditText"
    android:layout_marginTop="24dp"/>
    <EditText
        android:layout_width="@dimen/authViewWidth"
        android:layout_height="wrap_content"
android:id="@+id/pass_login_et"
        android:gravity="right|center_vertical"
        style="@style/Theme.NikeStoreTir1403.AuthTheme.EditText"

        android:hint="@string/password"
        android:layout_marginTop="16dp"/>
<com.google.android.material.button.MaterialButton
    android:layout_width="@dimen/authViewWidth"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
 app:cornerRadius="8dp"
    android:id="@+id/loginBtn"
    android:minHeight="48dp"
    android:text="@string/loginTitle"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0.4"

    android:textAppearance="?textAppearanceBody1"
    android:text="@string/signUpHint"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUp_link_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:fontFamily="@font/iranyekan_bold"
            android:text="@string/signUp"/>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>