<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main.list.ProductListActivity">
<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <com.example.nikestore_tir_1403.view.NikeToolbar
        android:layout_width="match_parent"
        android:id="@+id/productListToolbar"
        android:layout_height="56dp"
        app:nt_title="@string/productsList"/>
    <View
        android:layout_width="match_parent"
        android:background="?dividerColor"
        android:layout_height="1dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/sortIv"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sort" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:text="@string/sort"
            android:textAppearance="?textAppearanceBody1"

            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/sortIv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortSelectedTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?textAppearanceBody2"
            android:layout_marginTop="4dp"

            android:text="TextView"
            android:textSize="10dp"
            android:textColor="@color/darkGray"
tools:text="@string/sortLatest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sortIv"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/viewTypeChangerBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_grid_view_24" />
<View
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:id="@+id/viewSortChanger"
    android:background="?selectableItemBackgroundBorderless"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/viewTypeChangerBtn"/>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?dividerColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/viewTypeChangerBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/productsListRv"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>